SalesforceYml/force-app/main/default/objects/Crime_History_Check__c/Crime_History_Check__c.object-meta.xml
<CustomObject>
    <label>Criminal History Check</label>
    <nameField>
        <label>Crime History Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criminal History Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>