SalesforceYml/force-app/main/default/objects/Crime_History_Check__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Not Clear</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
                <default>true</default>
                <label>Needs Review</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>